# combaero

./: .biomeignore  .clang-tidy  .clangd  .commit_message.txt  .envrc  .gitignore  .pre-commit-config.yaml  .python-version  AGENTS.md  BUG_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  COMMIT_MSG.md  CONTRIBUTING.md  GEMINI.md  HEREDOC_ISSUES.md  JACOBIAN_IMPLEMENTATION_SUMMARY.md  JACOBIAN_TOLERANCE_TIGHTENING.md  LICENSE  Makefile  PR_BODY.md  PR_BODY_CONSOLIDATION.md  PYTHON_INTERFACE_TEST_REPORT.md  README.md  TESTING.md  TODO.md  TRANSPORT_ANALYSIS.md  TRANSPORT_FIX_STATUS.md  biome.json  build_log.txt  ci_jobs.json  commit_msg.txt  conftest.py  continuity_test  debug_combustor.py  design_questions.txt  equation_verification  jacobian_baseline_current.csv  profile.txt  (+8 more)
cantera_validation_tests/: .gitignore  COMMIT_MESSAGE.md  EQUILIBRIUM_COMMIT_MESSAGE.md  EQUILIBRIUM_TEST_RESULTS.md  EQUILIBRIUM_VALIDATION_PLAN.md  FINAL_TEST_REPORT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  Makefile  NASA9_FINAL_STATUS.md  NASA9_POLYNOMIAL_RESULTS.md  QUICKSTART.md  README.md  TEST_RESULTS.md  TEST_SUMMARY.md  UNITS_REFERENCE.md  VALIDATION_FINDINGS.md  VALIDATION_METHODOLOGY.md  __init__.py  analyze_viscosity.py  combaero_nasa9.yaml  conftest.py  pyproject.toml  pytest.ini  run_tests.sh  test_combustion_validation.py  test_equilibrium_validation.py  test_mixing_validation.py  test_nasa9_polynomials.py  test_results.txt  test_state_setters.py  test_transport_validation.py
gui/: MANIFEST.in  README.md  nw_pp_test.json  nw_pp_test_ic.json  pyproject.toml
gui/backend/: graph_builder.py  main.py  runner.py  schemas.py  units.py
gui/frontend/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
gui/frontend/src/: App.css  App.tsx  api.ts  index.css  node-25-regression.test.ts
gui/frontend/src/components/: AreaInput.tsx  CompositionEditor.tsx  ConvergenceChart.tsx  DiagnosticsPanel.tsx  FlowEdge.tsx  Inspector.tsx  LengthInput.tsx  NetworkCanvas.tsx  NodeDiagRows.tsx  NumericInput.tsx  Sidebar.tsx  SolverStatusBadge.tsx  SurfaceEnhancementInspector.tsx  ThermalEdge.tsx  UnitInput.tsx  WallLayersEditor.tsx  flowTypes.ts
gui/frontend/src/hooks/: useCopyPaste.ts
gui/frontend/src/store/: useStore.test.ts  useStore.ts
gui/frontend/src/utils/: diagnostics.ts  nodeUtils.ts  quantities.ts  validation.ts
python/: CMakeLists.txt  README.md  profile_network_costs.py
python/combaero/: __init__.py  _core.cpp  _flow_solution.py  _solver_tools.py  compressible.py  heat_transfer.py  incompressible.py  species.py  vortex.py
python/combaero/network/: __init__.py  _mpce_v2_jacobian.py  components.py  diagnostics.py  graph.py  mpce_v2_element.py  pressure_loss.py  schema.py  solver.py  utils.py
python/combaero/network/combustion/: __init__.py  combustion.py  combustion_result.py  stoichiometry.py
python/examples/: acoustic_examples.py  axial_staging_combustor_network_example.py  basic_mixture_h.py  combustion_example.py  combustor.json  combustor_heat_transfer.py  combustor_liner_cooling.py  combustor_liner_cooling_network.py  combustor_liner_cooling_standalone.py  combustor_network_example.py  combustor_pressure_loss_example.py  compare_combustor_implementations.py  compressible_flow_example.py  compressible_vs_incompressible_network.py  counterflow_effusion_combustor.py  de_laval_nozzle.py  flow_regime_comparison.py  friction_and_pressure_drop.py  friction_and_pressure_drop_channel.py  gas_turbine_cycle.py  heat_transfer_channel_flow.py  heat_transfer_measurement.py  heat_transfer_pipe_flow.py  ic_engine_cycle.py  material_wall_verification.py  network_from_grid.py  network_from_grid_v2.py  network_from_grid_v3.py  network_runner_bc_swap.py  network_runner_combustion_sweep.py  plot_utils.py  reactor_design.py  thermo_properties.py  vatistas_validation_plot.py  wall_coupling_simple.py
python/scripts/: verify_phase2_aliases.py
python/tests/: README.md  experimental_bounded_solver.py  experimental_phi_closure.py  test_acoustic_properties.py  test_acoustics.py  test_adapter.py  test_air_properties.py  test_annular_duct_acoustics.py  test_area_change.py  test_area_discharge_coefficient_connection.py  test_can_annular_acoustics.py  test_chamber_mixing.py  test_channel_element_htc.py  test_channel_flow.py  test_channel_jacobians.py  test_channel_roughness.py  test_ci_protection_probe.py  test_combustion_elements.py  test_combustion_jacobians.py  test_combustion_lhv.py  test_combustion_smoothing.py  test_combustion_state.py  test_combustor_liner_cooling_coupled.py  test_combustor_network.py  test_combustor_regression.py  test_common_names.py  test_complete_state.py  test_compressible.py  test_constant_k_tee.py  test_continuation_logic.py  test_convective_surface.py  test_cooling_correlations.py  test_diagnostics_schema.py  test_diameter_discharge_coefficient_connection.py  test_effective_area_connection.py  test_energy_boundary.py  test_equivalence_ratio.py  test_expansibility_factor.py  test_flow_network_walls.py  test_friction.py  (+73 more)
python/tests/data/vatistas/: fig1b_n=2.csv  fig1b_n=3.csv  fig2a_exp_data.csv  (+2 more)
tests/: CMakeLists.txt  test_acoustic_adapter.cpp  test_energy_boundary.cpp  test_fraction_functions.cpp  test_heat_transfer_jacobians.cpp  test_humidair.cpp  test_ice_equation_accuracy.cpp  test_incompressible.cpp  test_multi_port_chamber.cpp  test_orifice.cpp  test_solver_jacobians.cpp  test_state.cpp  test_state_sync.cpp  test_stream_jacobians.cpp  test_tee_junction.cpp  test_thermo_transport.cpp  test_units.cpp  test_water_equation_accuracy.cpp
thermo_data_generator/: .generator_state.json  NASA9_CANTERA_PLAN.md  README.md  create_cpp_header.py  extract_nasa_cea_data.py  extract_species_data.py  extract_thermo_transport_data.py  generate_cantera_nasa9.py  generate_cantera_nasa9_yaml.py  generate_thermo_data.py  pyproject.toml  reference_thermo_transport_data.h  species_data.csv  test_create_cpp_header.py  test_extract_thermo_transport_data.py  test_generate_thermo_data.py  thermo_transport_data_nasa9.h
(+342 files in other folders)
