[build-system]
requires = ["scikit-build-core>=0.12.2", "pybind11>=3.0.4", "setuptools-scm>=8"]
build-backend = "scikit_build_core.build"

[project]
name = "combaero"
dynamic = ["version"]
description = "Combustion and aerothermal tools (C++ core with Python bindings)"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "thiemom", email = "2641939+thiemom@users.noreply.github.com" }
]
keywords = ["aerodynamics", "combustion", "aerothermal", "propulsion", "solver"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = ["numpy>=1.24", "scipy>=1.10"]

[project.urls]
Homepage = "https://github.com/thiemom/combaero"
Repository = "https://github.com/thiemom/combaero"
"Bug Tracker" = "https://github.com/thiemom/combaero/issues"

[project.optional-dependencies]
examples = ["matplotlib>=3.8"]
generator = ["pandas>=2.2.3", "pyyaml>=6.0.2"]
gui = ["combaero-gui"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "mypy>=1.12.0",
    "pre-commit>=4.0.0",
    "build>=1.2.0",
    "pytest-cov",
    "setuptools-scm>=10.0.5",
]

[tool.scikit-build]
wheel.packages = ["python/combaero"]
sdist.exclude = ["gui/*", "gui/**/*"]
build.verbose = true

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.scikit-build.cmake]
args = ["-DCOMBAERO_ENABLE_TESTS=OFF", "-DCOMBAERO_BUILD_PYTHON=ON"]

[tool.setuptools_scm]

[tool.uv]
managed = true
package = true

[tool.uv.workspace]
members = ["cantera_validation_tests", "thermo_data_generator", "gui"]

[tool.uv.sources]
combaero-gui = { workspace = true }
