[tool.poetry]
name = "cantera-validation-tests"
version = "0.1.0"
description = "Cantera-based validation tests for CombAero combustion, mixing, and transport properties"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
cantera = "^3.0.0"
numpy = "^1.26.0"
pytest = "^8.0.0"
pytest-xdist = "^3.5.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
