[project]
name = "cantera-validation-tests"
version = "0.2.0"
description = "Cantera-based validation tests for CombAero combustion, mixing, and transport properties"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cantera>=3.0.0",
    "numpy>=1.26.0",
    "pytest>=8.0.0",
    "pytest-xdist>=3.5.0",
]

[dependency-groups]
dev = [
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# This is a test-only project, no packages to distribute
packages = []
